<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transaction_date_label"
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/label_date" />

        <TextView
            android:id="@+id/transaction_date"
            style="@style/TransactionDetailsDialogValueStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_accounted_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/label_last_billed_date" />

        <TextView
            android:id="@+id/transaction_last_accounted_date"
            style="@style/TransactionDetailsDialogValueStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/transaction_amount"
            style="@style/TransactionDetailsDialogValueStyle"
            android:text="@string/default_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/category" />

        <TextView
            android:id="@+id/transaction_category"
            style="@style/TransactionDetailsDialogValueStyle"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/description" />

        <TextView
            android:id="@+id/transaction_description"
            style="@style/TransactionDetailsDialogValueStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/budget" />

        <TextView
            android:id="@+id/transaction_budget"
            style="@style/TransactionDetailsDialogValueStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/modify_reason" />

        <TextView
            android:id="@+id/modify_reason"
            style="@style/TransactionDetailsDialogValueStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recurrence_period_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TransactionDetailsDialogLabelStyle"
            android:text="@string/label_recurring_period" />

        <TextView
            android:id="@+id/recurring_period"
            style="@style/TransactionDetailsDialogValueStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/button_close" />

</LinearLayout>